modified background home mobile and added new rumble island

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width-device-width, initial-sacle=1.0">
 
   <title>Home Kids Code | Master en Diseño Web BAU</title>
 
@@ -15,8 +16,10 @@
 <body>
 
   <div class="header color-txt-white">
-    
-    <img src="../img/logoKidsCode.svg" class="logo">
+    <!--<div>resolucion pantalla: <script language="JavaScript"> 
+document.writeln(document.width + " x " + document.height) 
+</script></div>-->
+    <img src="img/logoKidsCode.svg" class="logo">
     <div class="slogan center">
       <h1 class="t-h1">La forma más divertida de aprender programando</h1>
       <a href="pdf/fichas_v1.pdf">
@@ -142,15 +145,15 @@
 
       </div>
 
-      <div class="step-img monster-island">  
-        <img src="img/monsterIsland.svg" >
+      <div class="step-img rumble-island">  
+        <img src="img/rumbleIsland.svg" >
       </div>
 
     </div>
   </div>
   <div class="content2">
     <img class="img-content2" src="img/imgKids2.png" >
-    <img class="img-content3" src="img/monsterIsland.svg" >
+    <img class="img-content3" src="img/rumbleIsland.svg" >
   </div> 
 </div>
 <div class="footer color-txt-white">
